2015-06-13  6.9.1-6 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.1-6, SVN revision 18945.

2015-06-14  6.9.1-6 Cristy  <quetzlzacatenango@image...>
  * Cache cloning on disk optimized with sendfile() (if available).
  * Add an additional check for end-of-file for the RLE coder (reference
    http://www.imagemagick.org/discourse-server/viewforum.php?f=3).
  * Respect resource limits in AVS coder.

2015-06-13  6.9.1-6 Glenn Randers-Pehrson <glennrp@image...>
  * Reverted change to 6.9.1-3 that skipped palette-building.

2015-06-13  6.9.1-5 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.1-5, SVN revision 18882.

2015-06-03  6.9.1-5 Cristy  <quetzlzacatenango@image...>
  * Use correct scale when interpretting alpha (e.g. rgba(0,0,0,1)).
  * DrawGetVectorGraphics() now returns proper XML (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=27751).
  * Support writing EXR files with different color types (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=27759).
  * Prefer PKG_CHECK_MODULES() when searching for delegate libraries.
  * Throw exception if frame option bevel exceeds to the image width / height.
  * Resolve undefined behaviors (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=27811).

2015-06-01  6.9.1-4 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.1-4, SVN revision 18697.

2015-06-01  6.9.1-4 Cristy  <quetzlzacatenango@image...>
  * Support 'restrict' keyword under Windows.

2015-05-25  6.9.1-4 Dirk Lemstra <dirk@lem.....org>
  * Added support for reading a user supplied layer mask in PSD files.
  * Added support for reading photoshop layers in TIFF files.

2015-05-24  6.9.1-3 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.1-3, SVN revision 18623.

2015-05-03  6.9.1-3 Dirk Lemstra <dirk@lem.....org>
  * Fixed transparency issue with 16-bit tga files (reference